Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/fields/Requirement_Type__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Type__c</fullName>
    <label>Requirement Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounts</fullName>
            </value>
            <value>
                <fullName>Advertisement</fullName>
            </value>
            <value>
                <fullName>Branding</fullName>
            </value>
            <value>
                <fullName>brochure</fullName>
            </value>
            <value>
                <fullName>Brochure &amp; Pricelist</fullName>
            </value>
            <value>
                <fullName>Catalogue</fullName>
            </value>
            <value>
                <fullName>Compliants</fullName>
            </value>
            <value>
                <fullName>Dealer Details</fullName>
            </value>
            <value>
                <fullName>Dealership</fullName>
            </value>
            <value>
                <fullName>Discounts</fullName>
            </value>
            <value>
                <fullName>Distributoship</fullName>
                <label>Distributorship</label>
            </value>
            <value>
                <fullName>Exhibition</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Job Opportunity</fullName>
            </value>
            <value>
                <fullName>Logistics</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Price &amp; discounts</fullName>
            </value>
            <value>
                <fullName>Pricelist</fullName>
            </value>
            <value>
                <fullName>Purchase Dept.</fullName>
            </value>
            <value>
                <fullName>Quotation</fullName>
            </value>
            <value>
                <fullName>Samples</fullName>
            </value>
            <value>
                <fullName>Solvent</fullName>
            </value>
            <value>
                <fullName>Technical Manual</fullName>
            </value>
            <value>
                <fullName>Technical Details</fullName>
            </value>
            <value>
                <fullName>Distributor Details</fullName>
            </value>
            <value>
                <fullName>Scheme</fullName>
            </value>
            <value>
                <fullName>Gift</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>