Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/fields/Response_Executive__c.field-meta.xml
<CustomField>
    <fullName>Response_Executive__c</fullName>
    <label>1st Response Executive(not used)</label>
    <type>TextArea</type>
</CustomField>