Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BANDHAN</fullName>
            </value>
            <value>
                <fullName>DIGITAL MARKETING</fullName>
            </value>
            <value>
                <fullName>ENQ MB</fullName>
            </value>
            <value>
                <fullName>EXHIBITION</fullName>
            </value>
            <value>
                <fullName>INDIA MART</fullName>
            </value>
            <value>
                <fullName>INFO</fullName>
            </value>
            <value>
                <fullName>LANDLINE</fullName>
            </value>
            <value>
                <fullName>PAPER AD</fullName>
            </value>
            <value>
                <fullName>PROMOTIONAL ACTIVITY</fullName>
            </value>
            <value>
                <fullName>RADIO AD</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>SOCIAL MEDIA</fullName>
            </value>
            <value>
                <fullName>TOLLFREE</fullName>
            </value>
            <value>
                <fullName>TV AD</fullName>
            </value>
            <value>
                <fullName>VEHICLE BRANDING</fullName>
            </value>
            <value>
                <fullName>WALL PAINTING</fullName>
            </value>
            <value>
                <fullName>WHATSAPP</fullName>
            </value>
            <value>
                <fullName>MISSED CALL</fullName>
            </value>
            <value>
                <fullName>Zendesk</fullName>
            </value>
            <value>
                <fullName>Zendesk Chat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>