Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/fields/st_ACTION__c.field-meta.xml
<CustomField>
    <fullName>st_ACTION__c</fullName>
    <label>1st  ACTION(not used)</label>
    <type>TextArea</type>
</CustomField>