Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/fields/Team_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Team_Feedback__c</fullName>
    <label>Team Feedback(in validation)</label>
    <type>TextArea</type>
</CustomField>