Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/fields/TL__c.field-meta.xml
<CustomField>
    <fullName>TL__c</fullName>
    <label>TL(not used)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>