Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/fields/Verified_By__c.field-meta.xml
<CustomField>
    <fullName>Verified_By__c</fullName>
    <label>Verified By(not used)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>