Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/validationRules/Distributor_Dealer_linked_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Distributor_Dealer_linked_mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL(Conversion__c ,&apos;Converted to Ashirwad&apos;), ISBLANK(Distributor_DealerLinked__c))</errorConditionFormula>
    <errorDisplayField>Distributor_DealerLinked__c</errorDisplayField>
    <errorMessage>please fill DISTRIBUTOR/DEALER LINKED</errorMessage>
</ValidationRule>