Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/validationRules/Either_Phone_or_Mobile_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Either_Phone_or_Mobile_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Phone_Number__c  =&apos;&apos;,Mobile__c =&apos;&apos;, $Profile.Name ==&apos;BD&apos;)</errorConditionFormula>
    <errorMessage>Enter Either Phone Or Mobile Number...!!!</errorMessage>
</ValidationRule>