Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/validationRules/Email_mandatory_when_source_is_INFO.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_mandatory_when_source_is_INFO</fullName>
    <active>true</active>
    <description>Email is mandatory when source is INFO.</description>
    <errorConditionFormula>AND(ISPICKVAL( Source__c ,&apos;INFO&apos;),ISBLANK( Email__c ))</errorConditionFormula>
    <errorDisplayField>Email__c</errorDisplayField>
    <errorMessage>Please enter Email ID</errorMessage>
</ValidationRule>