Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/validationRules/Feedback_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Feedback_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL(Enquiry_Status__c , &quot;Closed&quot;),   ISBLANK(Team_Feedback__c) )</errorConditionFormula>
    <errorDisplayField>Team_Feedback__c</errorDisplayField>
    <errorMessage>Please fill the Team feedback field</errorMessage>
</ValidationRule>