Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/validationRules/If_internation_state_is_not_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>If_internation_state_is_not_mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>AND( NOT(ISPICKVAL(Enquiry_Type__c, &apos;International&apos;)),ISBLANK(TEXT(State__c) ) )</errorConditionFormula>
    <errorDisplayField>State__c</errorDisplayField>
    <errorMessage>State is mandatory</errorMessage>
</ValidationRule>