Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/validationRules/if_phone_number_is_more_than_10_digits.validationRule-meta.xml
<ValidationRule>
    <fullName>if_phone_number_is_more_than_10_digits</fullName>
    <active>true</active>
    <errorConditionFormula>AND(LEN( Mobile__c)&gt;10 , Mobile_check__c=false)</errorConditionFormula>
    <errorMessage>Mobile number has more than 10 digits,still want to save.If yes,click mobile check</errorMessage>
</ValidationRule>