Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/validationRules/Mobile_num_with_10_dig_or_above_10_digit.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_num_with_10_dig_or_above_10_digit</fullName>
    <active>true</active>
    <description>Mobile number with 10 digit or above 10 digit.</description>
    <errorConditionFormula>LEN(Mobile__c)  &lt;   10</errorConditionFormula>
    <errorDisplayField>Mobile__c</errorDisplayField>
    <errorMessage>Please enter 10 digit mobile number</errorMessage>
</ValidationRule>