Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/validationRules/Pending_from_is_mandatory_for_Open_stage.validationRule-meta.xml
<ValidationRule>
    <fullName>Pending_from_is_mandatory_for_Open_stage</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Enquiry_Status__c,&apos;Open&apos;), ISPICKVAL(Pending_From__c,&apos;&apos;))</errorConditionFormula>
    <errorDisplayField>Pending_From__c</errorDisplayField>
    <errorMessage>If Enquiry Stage is Open then Pending from is Mandatory</errorMessage>
</ValidationRule>