Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/validationRules/Rating.validationRule-meta.xml
<ValidationRule>
    <fullName>Rating</fullName>
    <active>true</active>
    <description>Ratings when Enquiry Status is closed</description>
    <errorConditionFormula>AND(
 TEXT(Enquiry_Status__c)==&apos;Closed&apos;,
 ISBLANK(TEXT(Ratings__c)) 
)</errorConditionFormula>
    <errorDisplayField>Ratings__c</errorDisplayField>
    <errorMessage>Please Select the Rating</errorMessage>
</ValidationRule>