Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/validationRules/Salutation_Cannot_Be_Empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Salutation_Cannot_Be_Empty</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Salutation__c , &quot;&quot;), $Profile.Name ==&apos;BD&apos;)</errorConditionFormula>
    <errorMessage>Please Select Salutation.!!!</errorMessage>
</ValidationRule>