Partial_14Dec2021/force-app/main/default/objects/Enquiry__c/listViews/My_Enquiries.listView-meta.xml
<ListView>
    <fullName>My_Enquiries</fullName>
    <columns>NAME</columns>
    <columns>Verified__c</columns>
    <columns>Enquiry_Date__c</columns>
    <columns>Enquiry_Status__c</columns>
    <columns>Phone_Number__c</columns>
    <columns>Product__c</columns>
    <columns>Caller_type__c</columns>
    <filterScope>Everything</filterScope>
    <label>Eranna</label>
</ListView>